<resources>
    <string name="app_name">Cotizador Autos</string>
    <string name="txt_user">Ingresa tu Usuario:</string>
    <string name="txt_cedula">Ingresa tu Número de Cédula:</string>
    <string name="txt_codigo">Ingresa tu Código:</string>
    <string name="txt_nombre">Ingresa tu Nombre:</string>
    <string name="txt_password">Ingresa tu Contraseña</string>
    <string name="txt_password2">Confirma tu Contraseña</string>
    <string name="txt_marca">Marca del auto:</string>
    <string name="txt_modelo">Modelo del auto:</string>
    <string name="txt_year">Año del auto:</string>
    <string name="txt_km">Kilometraje del auto:</string>
    <string name="txt_precio">Valor de venta del auto:</string>
    <string name="txt_owners">Número de Dueños:</string>
    <string name="txt_resultado">OFRECER:</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_save">GUARDAR REGISTRO</string>
    <string name="btn_calcular">CALCULAR</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="cod_vehiculo">Código Vehículo:</string>
    <string name="precio_vehiculo">Precio del auto:</string>
    <string name="cilindraje_auto">Cilindraje:</string>
    <string name="pais">País de Origen:</string>
    <string name="txt_entrada">Ingrese el valor de entrada:</string>
    <string name="buscar_vehiculo">Buscar Vehículo</string>
    <string name="btn_cotizar">COTIZAR</string>
    <string name="resultado_cotizar">CUOTAS: </string>

</resources>